<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_task">My Task</string>
    <string name="add_task">ADD TASK</string>
    <string name="mytask">MYTASK</string>
    <string name="add_taskAc">Add Task</string>
    <string name="task_title">Task Title:</string>
    <string name="task_title_txt">Task Title :</string>
    <string name="task_description_edit">Task Description</string>
    <string name="task_description_txt">Task Description :</string>
    <string name="total_task">Total Task :</string>
    <string name="all_task_txt">All Task</string>
    <string name="all_task_image">All_TASK_IMAGE</string>
    <string name="backBtn">Back</string>
    <string name="add_task_btn">Add Task</string>
    <string name="total_no">Total</string>
    <string name="username">Username</string>
    <string name="save_btn">Save</string>
    <string name="new_user_name">New User Name</string>
    <string name="title_a">Title A</string>
    <string name="title_b">Title B</string>
    <string name="title_c">Title C</string>
    <string name="set_username">Set Username</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="new_username">New username</string>
</resources>