<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingPage">


    <TextView
        android:id="@+id/username_txt_view"
        android:layout_width="102dp"
        android:layout_height="38dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="146dp"
        android:text="@string/new_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toStartOf="@+id/username_edit_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_txt"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="237dp"
        android:hint="@string/new_username"
        android:autofillHints="none"
        android:inputType="textPersonName"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/save_username_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_txt_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_username_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="158dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_txt_view" />
</android.support.constraint.ConstraintLayout>