<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="78dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="611dp"
        android:text="@string/add_taskAc"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/task_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="441dp"
        android:hint="@string/task_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="2dp"
        android:labelFor="@id/task_title_input"
        android:text="@string/task_title_txt"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/task_title_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="309dp"
        android:hint="@string/task_description_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="264dp"
        android:layout_height="42dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="9dp"
        android:labelFor="@id/task_desc"
        android:text="@string/task_description_txt"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/task_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="148dp"
        android:labelFor="@id/total_task_no"
        android:text="@string/total_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_desc" />

    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="45dp"
        android:text="@string/add_task_btn"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_desc" />

    <NumberPicker
        android:id="@+id/total_task_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/task_desc" />

</android.support.constraint.ConstraintLayout>